--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,12 @@ textarea {
   margin: 16px auto;
   padding: 16px 32px;
 
+  color: var(--white);
+  font-weight: bold;
+  text-transform: uppercase;
+
   background-color: var(--header-bg);
+  border: 1px solid var(--header-bg);
   border-radius: 4px;
 }
 
